# omega

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
code/: main.cpp
code/filesystem/: Filesystem.cpp  Filesystem.h
code/lexer/include/: Lexer.h
code/lexer/src/: Lexer.cpp
code/memory/: BufferSize.h
main/include/: Filesystem.h  Lexer.h
main/src/: Files.cpp  Lexer.cpp  main.cpp
src/: main.cpp
src/Filesystem/: Filesystem.cpp
